Fix deadlock in webseeding code

BUG: 295719